Test Close during a start and saves queued behind a slow disk (#7)
#7 lists both paths, and neither was reached. GameSaveFailureTest drives
a close only from RUNNING, and every queued save it makes is written
before the next arrives, so neither the deferred close nor the one-slot
coalescing queue was ever held to its promise. The new test asks Close
twice while a start is under way and checks both callbacks wait for the
start to end and run once, then holds the disk on a latch while 200
saves arrive and checks exactly two writes happen, the newest bytes win,
and only written saves are acknowledged. No core and no sleeps.

The README now says how to run the checks ./test.sh cannot: the native
lifecycle and in-game checks against the player's own core and game, and
dialog focus on a real display.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>